Adicionado bloco de notas, modelo DER, aviso de tentativa falha e reformulação de lógica

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="mysql://root@localhost:3306/roubo_diamante"
+DATABASE_URL="mysql://sql10805347:z5YYzfJl1S@sql10.freesqldatabase.com:3306/sql10805347"
