--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "16.0.1",
     "prisma": "^6.18.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sweetalert2": "^11.26.3",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
